<resources>
    <string name="app_name">CommonUtilsDemo</string>
    <string name="redirect_ui_action">com.github.evan.redirect_ui</string>
    <string name="warning">警告</string>
    <string name="exit">退出</string>
    <string name="just_test">测试</string>
    <string name="just_stop_test">停止测试</string>
    <string name="you_do_not_give_the_permission">您没有基于以下权限,App无法正常运行,请重新打开App或者在系统设置中给予响应的权限. \n %1$s</string>
    <string name="about">关于</string>
    <string name="open_log">打开Log显示</string>
    <string name="close_log">关闭Log显示</string>
    <string name="drawer_open_desc">更多</string>
    <string name="drawer_close_desc">回到首页</string>
    <string name="open_rocket">打开火箭</string>
    <string name="close_rocket">关闭火箭</string>
    <string name="home_page_link">https://github.com/EvanWang1987</string>
    <string name="home">首页</string>
    <string name="device_information">设备信息</string>
    <string name="convert">转换</string>
    <string name="px_convert_to_dp">px转dp</string>
    <string name="px_convert_to_sp">px转sp</string>
    <string name="dp_convert_to_px">dp转px</string>
    <string name="sp_convert_to_px">sp转px</string>
    <string name="input_converting_value">输入要转换的值</string>
    <string name="current_device_brand">设备品牌: %1$s</string>
    <string name="current_device_manufacturer">硬件制造商: %1$s</string>
    <string name="current_device_model">设备型号: %1$s</string>
    <string name="current_device_os_version">系统版本: %1$s</string>
    <string name="current_device_api_level">Api版本: %1$s</string>
    <string name="current_device_kernel">内核版本: %1$s</string>
    <string name="current_device_os_code_build_version">系统代码编译版本: %1$s</string>
    <string name="current_device_radio_version">基带版本: %1$s</string>
    <string name="current_device_sdcard">设备存储: %1$s</string>
    <string name="current_device_ram">设备运行内存: %1$s</string>
    <string name="current_device_battery_capacity">电池容量: %1$s</string>
    <string name="current_device_battery_level">当前电量: %1$s</string>
    <string name="current_device_battery_temperature">电池温度: %1$s</string>
    <string name="current_device_screen_real_width">当前设备屏幕宽: %1$d</string>
    <string name="current_device_screen_real_height">当前设备屏幕高: %1$d</string>
    <string name="current_device_screen_resolution">当前设备屏幕分辨率: %1$s</string>
    <string name="current_device_screen_aspect_ratio">当前设备屏幕宽高比: %1$s</string>
    <string name="current_device_system_status_bar_height">当前系统状态栏高: %1$s</string>
    <string name="current_device_screen_xdpi">当前设备x轴DPI: %1$s</string>
    <string name="current_device_screen_ydpi">当前设备y轴DPI: %1$s</string>
    <string name="current_device_screen_dpi">当前设备DPI: %1$d</string>
    <string name="current_device_screen_density">当前设备Density: %1$s</string>
    <string name="current_device_screen_scale_density">当前设备字体Density: %1$s</string>
    <string name="current_device_screen_size">当前设备尺寸: %1$s</string>
    <string name="please_input_legitimate_integer_or_decimal">请输入合法的整数或小数</string>
    <string name="un_available_sdcard">未检测到内部存储设备</string>
    <string name="un_available_ram">未检测到运行内存</string>
    <string name="calculator">计算器</string>
    <string name="addition">+</string>
    <string name="subtraction">-</string>
    <string name="multiplication">*</string>
    <string name="division">/</string>
    <string name="equal">=</string>
    <string name="membrane">%</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="dot">.</string>
    <string name="clear_calculator">C</string>
    <string name="arithmetic">算法</string>
    <string name="binary_search">折半查找</string>
    <string name="select_sort">选择排序</string>
    <string name="bubble_sort">冒泡排序</string>
    <string name="merge_sort">归并排序</string>
    <string name="about_collection">集合相关</string>
    <string name="array_list">Array List</string>
    <string name="linked_list">Linked List</string>
    <string name="hash_set">Hash Set</string>
    <string name="linked_hash_set">Linked Hash Set</string>
    <string name="tree_set">Tree Set</string>
    <string name="hash_map">Hash Map</string>
    <string name="hash_table">Hash Table</string>
    <string name="linked_hash_map">Linked Hash Map</string>
    <string name="tree_map">Tree Map</string>
    <string name="sparse_array">Sparse Array</string>
    <string name="array_map">Array Map</string>
    <string name="add">增</string>
    <string name="add_first">头部增</string>
    <string name="add_last">尾部增</string>
    <string name="remove">删</string>
    <string name="remove_first">删头部</string>
    <string name="remove_last">删尾部</string>
    <string name="set">改</string>
    <string name="get">查</string>
    <string name="to_string">To String</string>
    <string name="features">特性</string>
    <string name="sort">排序</string>
    <string name="multi_thread">多线程测试</string>
    <string name="stop_multi_thread">停止多线程测试</string>
    <string name="go_through">遍历</string>
    <string name="go_through_by_entry_set">通过entry set遍历</string>
    <string name="go_through_by_iterator">通过iterator遍历</string>
    <string name="go_through_by_list_iterator">通过ListIterator遍历</string>
    <string name="clear">清除</string>
    <string name="features_array_list">
        ArrayList的数据结构就是数组。\r\n
        修改，查询快，增删慢，可存储重复元素，线程不同步。因为index的存在，所以修改，查询直接依赖index进行操作，而增删慢是因为，每次增删都要动态的重新创建内部维护的数组。\r\n
        默认空参构造时内部数组为一个静态空数组。每次调用add(E e)时，\r\n  会调用ensureCapacityInternal()函数，\r\n  去重新确定数组大小,如果size已经超出了原数组length，创建出一个大小为（原数组length + length / 2）的新数组，如果是空参构造，则创建一个length为10的内部数组\r\n  再将源数组中的元素复制进新数组,再将添加进来的新元素放在最后一个元素的后一位上。
    </string>
    <string name="features_linked_list">
        LinkedList的数据结构为双向链表,每一个元素存储时都对应生成一个Entry对象，Entry对象中存储了preview和next元素，头部元素的preview为尾部元素，尾部元素的next为头部元素,因此是双向链表。\r\n
        增删快，查询修改慢，可存储重复元素，线程不同步。因为是双向链表，因此添加，删除元素时，只需要在堆内存中创建出对象，并且修改Entry中的preview和next的指针即可。查询修改慢，是因为没有index，所以每次操作都需要遍历整个链表。\r\n
        LinkedList提供了addFirst,addLast,getFirst,getLast方法可以快速插入头尾部元素。
    </string>
    <string name="features_hash_set">
        HashSet的数据结构为哈希表。\r\n
        哈希表数据结构就是内部基于数组，依赖哈希算法直接算出index，然后进行增删改查。内部数组中维护的是Entry对象，Entry对象存储了Key、Value、hashCode，Entry是一个单向链表。\r\n
        HashSet内部其实使用了HashMap,只是value都是null。
        HashSet无序，不可保存重复对象，线程不同步，重复对象的判断依赖于HashCode和equals的比较结果。
    </string>
    <string name="features_linked_hash_set">
        LinkedHashSet的数据结构为哈希链表 + 双向链表。\r\n
        特点：根据hash算法快捷算出index来增删改查，并且保留插入顺序。
    </string>
    <string name="features_tree_set">
        TreeSet的数据结构为二叉树。\r\n
        二叉树就是每个节点都只能有两个子节点，即左子树和右子树，并且每个节点的子节点的排序都是一致的，要么是升序排列，要么是降序排列。\r\n
        TreeSet的特点就是去重复，元素自动排序，排序依赖于元素实现Comparable接口中的compareTo方法的返回值,或者依赖于构造TreeSet时传递的Comparator对象。\r\n
        因此TreeSet中的元素都必须实现Comparable接口。\r\n
        Java中默认实现Comparable的类有很多，比如Integer、String。
    </string>
    <string name="features_hash_map">
        HashMap的数据结构就是哈希表。\r\n
        哈希表数据结构就是内部基于数组，依赖哈希算法直接算出index，然后进行增删改查。内部数组中维护的是Entry对象，Entry对象存储了Key、Value、hashCode，Entry是一个单向链表。\r\n
        HashMap是存放键值对的容器，即key - value，key是唯一的，key通过HashCode和equals来保证唯一性。而value则可以不唯一。\r\n
        HashMap存放键值对，可以使用null作为key，HashMap的操作是线程不同步的。\r\n
        HashMap在构造时默认创建一个size为16的数组，并且有一个扩容因子，这个因子的作用就是在每次向HashMap中存储键值对时，都判断当前index是否为 size * 因子，如果成立，则开始扩容、重新创建内部数组。\r\n
        HashMap在put键值对时，会根据key计算出一个HashCode，并且算出这个HashCode对应存放的index，然后查询这个index对应的Entry链表，如果HashCode相同并且equals相同则覆盖旧的Value。如果对应index上没有Entry链表，则直接添加，每次添加时，都判断是否到达了size * 因子，如果到达，则重新扩容内部数组。
    </string>
    <string name="features_hash_table">
        原理同HashMap，HashSet，但线程同步。
    </string>
    <string name="features_linked_hash_map">
        LinkedHashMap的数据结构是哈希 + 链表\r\n
        内部基于hash算法快捷计算index并实现增删改查，并且使用链表来保证插入顺序。\r\n
        特点：key唯一，并且保证插入顺序。
    </string>
    <string name="features_tree_map">
        TreeMap的数据结构是二叉树。\r\n
        二叉树就是每个节点都只能有两个子节点，即左子树和右子树，并且每个节点的子节点的排序都是一致的，要么是升序排列，要么是降序排列。\r\n
        TreeMap的key必须实现Comparable已确定如何排序。
        TreeMap可以使用null作为key，线程不同步，key唯一并且自动排序。
    </string>
    <string name="features_sparse_array">
        SparseArray是Android中的集合。SparseArray数据结构为两个映射的数组。\r\n
        SparseArray存储key - value键值对,但key的数据类型固定为Integer, key不可重复，value可重复，线程不同步。\r\n
        key数组的数据类型固定为Integer,并且按从小到大顺序排列。通过key进行增删改查时都会用二分查找来进行key的定位，去操作value。\r\n
        因为每次操作都需要进行一次二分查找，所以当数据量庞大时，比较耗时，但数据量较小时，SparseArray的内存占用，效率都会较HashMap高（key是int[]类型，避免了自动拆箱装箱）。\r\n
        每次在put时，都会检查内部数组的容量，如果容量不足，就开始扩容，扩容规则为当前size小于4，扩容至8，如果大于4，则两倍扩容。
    </string>
    <string name="features_array_map">
        ArrayMap是Android中的集合。数据结构也是两个映射数组。\r\n
        和SparseArray原理一样,但key的数据类型为任意类型，key的排序依赖key的HashCode的对比。
    </string>
    <string name="about_thread">线程相关</string>
    <string name="single_producer_consumer">单生产者单消费者演示</string>
    <string name="multi_producer_consumer">多生产者多消费者演示</string>
    <string name="dead_lock">死锁演示</string>
    <string name="stop_demo">停止演示</string>
    <string name="about_thread_pool">线程池相关</string>
    <string name="about_async_task">Async相关</string>
    <string name="thread_pool_feature">线程池特性</string>
    <string name="test_cache_thread_pool">测试CacheThreadPool</string>
    <string name="test_fixed_thread_pool">测试FixedThreadPool</string>
    <string name="test_single_thread_pool">测试SingleThreadPool</string>
    <string name="test_scheduled_thread_pool">测试ScheduledThreadPool</string>
    <string name="jump">跳转</string>
    <string name="jump_back">回退</string>
    <string name="with_extras">携带数据</string>
    <string name="print_stack">打印栈</string>
    <string name="align_top">align_top</string>
    <string name="align_bottom">align_bottom</string>
    <string name="above">above</string>
    <string name="below">below</string>
    <string name="to_left_of">to_left_of</string>
    <string name="to_right_of">to_right_of</string>
    <string name="align_left">align_left</string>
    <string name="align_right">align_right</string>
    <string name="center_in_parent">center_in_parent</string>
    <string name="align_parent_top">align_parent_top</string>
    <string name="align_parent_bottom">align_parent_bottom</string>
    <string name="list_view_and_grid_view">List View &amp; Grid View</string>
    <string name="recycler_view">Recycler View</string>
    <string name="ver_nest_hor_scroll_view">竖向嵌套横向滑动布局</string>
    <string name="hor_nest_ver_scroll_view">横向嵌套竖向滑动布局</string>
    <string name="view_pager">View Pager嵌套</string>
    <string name="view_pager_nest_multi_horizontal_scroll">View Pager嵌套多重横向滑动</string>
    <string name="with_text_view">Ptr with TextView</string>
    <string name="with_view_group">Ptr with ViewGroup</string>
    <string name="with_list_view">Ptr with ListView</string>
    <string name="with_grid_view">Ptr with GridView</string>
    <string name="with_recycler_view">Ptr with RecyclerView</string>
    <string name="with_view_pager">Ptr with ViewPager</string>
    <string name="with_scroll_view">Ptr with ScrollView</string>
    <string name="with_horizontal_scroll_view">Ptr with HorizontalScrollView</string>
    <string name="edit_text">自定义EditText</string>
    <string name="flag_view">自定义标记View</string>
    <string name="time_flag_text_view">带时间标记的TextView</string>
    <string name="left_top_corner">左上角</string>
    <string name="left_bottom_corner">左下角</string>
    <string name="right_top_corner">右上角</string>
    <string name="right_bottom_corner">右下角</string>
    <string name="clickToShowFlag">显示标记</string>
    <string name="clickToDismissFlag">隐藏标记</string>
    <string name="clickToUpdateFlag2CurrentTime">更新标记时间</string>
    <string name="clickToGetLastUpdateTime">上次标记时间</string>
    <string name="lastUpdateTime">上次标记更新时间: %1$s</string>
    <string name="tint">着色</string>
    <string name="debug">Debug</string>
</resources>