<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:id="@+id/functionGroup" android:checkableBehavior="single">
        <item android:id="@+id/functionHome" android:title="@string/home" android:icon="@drawable/selector_action_button_home_dark" />
        <item android:id="@+id/functionScreenAdaptation" android:title="@string/screen_information" android:icon="@drawable/selector_screen_adaptation_black" />
        <item android:id="@+id/functionListView" android:title="@string/list_view_and_grid_view" android:icon="@drawable/selector_list_view_black" />
        <item android:id="@+id/functionRecyclerView" android:title="@string/recycler_view" android:icon="@drawable/selector_recycler_view_black" />
        <item android:id="@+id/functionVerNestHorScrollView" android:title="@string/ver_nest_hor_scroll_view" android:icon="@drawable/selector_nesting_touch_black" />
        <item android:id="@+id/functionHorNestVerScrollView" android:title="@string/hor_nest_ver_scroll_view" android:icon="@drawable/selector_nesting_touch_black" />
        <item android:id="@+id/functionViewPager" android:title="@string/view_pager" android:icon="@drawable/selector_button_view_pager_black_72dp" />
        <item android:id="@+id/functionViewPagerNestMultiHorizontalScroll" android:title="@string/view_pager_nest_multi_horizontal_scroll" android:icon="@drawable/selector_button_view_pager_black_72dp" />
        <item android:id="@+id/functionPullToRefresh" android:title="@string/pull_to_refresh" android:icon="@drawable/selector_ptr_black" />
        <item android:id="@+id/functionMediaController" android:title="@string/media_controller" android:icon="@drawable/selector_media_controller_black" />
        <item android:id="@+id/functionCustomEditText" android:title="@string/edit_text" android:icon="@drawable/selector_action_button_edit_dark" />
        <item android:id="@+id/functionFlagView" android:title="@string/flag_view" android:icon="@drawable/selector_action_button_flag_dark" />
        <item android:id="@+id/functionTint" android:title="@string/tint" android:icon="@drawable/selector_tint_black" />
        <item android:id="@+id/functionTest" android:title="@string/debug" android:icon="@drawable/selector_debug_black" />
    </group>
</menu>