<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:divider="@drawable/shape_alpha_divider_with_five_dp_height"
        android:showDividers="middle"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_screen_real_width"
            android:text="@string/current_device_screen_real_width"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txt_screen_real_height"
            android:text="@string/current_device_screen_real_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txt_screen_resolution"
            android:text="@string/current_device_screen_resolution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txt_screen_size"
            android:text="@string/current_device_screen_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txt_screen_status_bar_height"
            android:text="@string/current_device_system_status_bar_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txt_screen_xdpi"
            android:text="@string/current_device_screen_dpi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txt_screen_ydpi"
            android:text="@string/current_device_screen_dpi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txt_screen_dpi"
            android:text="@string/current_device_screen_dpi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txt_screen_density"
            android:text="@string/current_device_screen_density"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txt_screen_scale_density"
            android:text="@string/current_device_screen_scale_density"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <EditText
            android:layout_marginTop="50dp"
            android:id="@+id/etxt_input_convert_source_value"
            android:inputType="numberDecimal"
            android:hint="@string/input_converting_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_dp_to_px"
                android:layout_weight="1"
                android:text="@string/dp_convert_to_px"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_sp_to_px"
                android:layout_weight="1"
                android:text="@string/sp_convert_to_px"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_px_to_dp"
                android:layout_weight="1"
                android:text="@string/px_convert_to_dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_px_to_sp"
                android:layout_weight="1"
                android:text="@string/px_convert_to_sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:textColor="@color/Red"
            android:textSize="16sp"
            android:id="@+id/txt_convert_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>

</android.support.v4.widget.NestedScrollView>