<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/center_red_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/Red"
        android:padding="20dp"
        android:text="@string/center_in_parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/center_red_view"
        android:background="@color/Yellow"
        android:padding="10dp"
        android:text="@string/align_top" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/center_red_view"
        android:layout_alignParentRight="true"
        android:background="@color/Yellow"
        android:padding="10dp"
        android:text="@string/align_bottom" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/center_red_view"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@color/Green"
        android:padding="10dp"
        android:text="@string/above" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/center_red_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/Green"
        android:padding="10dp"
        android:text="@string/below" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/center_red_view"
        android:layout_below="@id/center_red_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@color/Pink"
        android:padding="10dp"
        android:text="@string/align_left" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/center_red_view"
        android:layout_alignRight="@id/center_red_view"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:background="@color/Pink"
        android:padding="10dp"
        android:text="@string/align_right" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/center_red_view"
        android:background="@color/Orange"
        android:padding="20dp"
        android:text="@string/to_left_of" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/center_red_view"
        android:background="@color/Orange"
        android:padding="20dp"
        android:text="@string/to_right_of" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/Orange"
        android:padding="20dp"
        android:text="@string/to_left_of" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/Gold"
        android:padding="5dp"
        android:text="@string/align_parent_top" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/Gold"
        android:padding="5dp"
        android:text="@string/align_parent_bottom" />

</RelativeLayout>