<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:columnCount="2">

        <android.support.v7.widget.CardView
            android:id="@+id/card_pull_layout_with_text_view"
            style="@style/CommonCardButton"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            app:layout_columnWeight="1">

            <TextView
                style="@style/CommonCardText"
                android:text="@string/with_text_view" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_pull_layout_with_view_group"
            style="@style/CommonCardButton"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            app:layout_columnWeight="1">

            <TextView
                style="@style/CommonCardText"
                android:text="@string/with_view_group" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_pull_layout_with_list_view"
            style="@style/CommonCardButton"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            app:layout_columnWeight="1">

            <TextView
                style="@style/CommonCardText"
                android:text="@string/with_list_view" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_pull_layout_with_grid_view"
            style="@style/CommonCardButton"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            app:layout_columnWeight="1">

            <TextView
                style="@style/CommonCardText"
                android:text="@string/with_grid_view" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_pull_layout_with_recycler_view"
            style="@style/CommonCardButton"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            app:layout_columnWeight="1">

            <TextView
                style="@style/CommonCardText"
                android:text="@string/with_recycler_view" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_pull_layout_with_view_pager"
            style="@style/CommonCardButton"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            app:layout_columnWeight="1">

            <TextView
                style="@style/CommonCardText"
                android:text="@string/with_view_pager" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_pull_layout_with_scroll_view"
            style="@style/CommonCardButton"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            app:layout_columnWeight="1">

            <TextView
                style="@style/CommonCardText"
                android:text="@string/with_scroll_view" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_pull_layout_with_horizontal_scroll_view"
            style="@style/CommonCardButton"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            app:layout_columnWeight="1">

            <TextView
                style="@style/CommonCardText"
                android:text="@string/with_horizontal_scroll_view" />

        </android.support.v7.widget.CardView>


    </android.support.v7.widget.GridLayout>

</android.support.v4.widget.NestedScrollView>